<resources>
    <string name="app_name">Story App Dicoding Submission</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="message_signup">Belum punya akun? </string>
    <string name="message_login">Sudah punya akun? </string>
    <string name="password_too_short">Password minimal 8 karakter</string>
    <string name="upload">Unggah</string>
    <string name="hint_unggah">Tulis cerita kamu...</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>